fixing gap in foot

--- a/css/main.css
+++ b/css/main.css
@@ -37,13 +37,18 @@ body {
 }
 
 #my-footer {
+  box-sizing: border-box;
+  overflow: hidden;
   background-color: forestgreen;
+  width: 100vw;
 }
 
 .footer-content {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer-content a {
